# napari-cool-tools-img-proc

./: README.md  setup.cfg  tox.ini
src/napari_cool_tools_img_proc/: __init__.py  _denoise.py  _equalization.py  _filters.py  _luminance.py  _normalization.py  napari.yaml
src/napari_cool_tools_img_proc/_tests/: test_sample_data.py  test_widget.py
